Ahora los usuarios pueden visualizar bien los cards de filtros desde pantalla reducida

--- a/templates/courses/user/wizard_form_user.html
+++ b/templates/courses/user/wizard_form_user.html
@@ -9,11 +9,11 @@
     <h1>Mis cursos</h1>
 </div>
     <div class="row">
-        <div class="col-12 d-flex">
+        <div class="col-12">
             <div class="w-100">
                 <div class="row">
-                    <div class="col-3">
-                        <div class="card col-12 filtro-card border-2 rounded-4" data-estado="all" style="cursor: pointer;">
+                    <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                        <div class="card filtro-card border-2 rounded-4" data-estado="all" style="cursor: pointer;">
                             <div class="card-body">
                                 <div class="row">
                                     <div class="col mt-0">
@@ -31,7 +31,7 @@
                         </div>
                         
                     </div>
-                    <div class="col-3">
+                    <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                         <div class="card col-12 filtro-card border-2 shadow rounded-4" data-estado="asignado" style="cursor: pointer;">
                             <div class="card-body">
                                 <div class="row">
@@ -49,7 +49,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                         <div class="card col-12 filtro-card border-2 rounded-4" data-estado=" activo" style="cursor: pointer;">
                             <div class="card-body">
                                 <div class="row">
@@ -67,7 +67,7 @@
                         </div>
                         
                     </div>
-                    <div class="col-3">
+                    <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                         <div class="card col-12 filtro-card border-2 rounded-4" data-estado="inactivo" style="cursor: pointer;">
                             <div class="card-body">
                                 <div class="row">
