--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -97,7 +97,7 @@
                     </a>
 
                             <a class="nav-link dropdown-toggle d-none d-sm-inline-block" href="#" data-bs-toggle="dropdown">
-                            <span class="text-dark">{{user.username}}</span>
+                            <span class="text-dark">{{ user.last_name }}</span>
                     </a>
                 <div class="dropdown-menu dropdown-menu-end">
                     <!--<a class="dropdown-item" href="pages-profile.html"><i class="align-middle me-1" data-feather="user"></i> Profile</a>
