--- a/templates/authapp/home.html
+++ b/templates/authapp/home.html
@@ -1,8 +1,60 @@
 {% extends 'layouts/base.html' %}
+{% load static %}
+
 {% block page_title %} Home{% endblock %}
-{% block title %}Home de administrador{% endblock %}
 
 {% block content %}
-Este es el contenido de mi pagina Principal
+<style>
+  .background-wrapper {
+    position: relative;
+    z-index: 0;
+    overflow: hidden;
+    min-height: 100vh; 
+  }
 
+  .background-wrapper::before {
+    content: "";
+    background: url("{% static 'template/img/wallpaper/Certificado top tier.jpg' %}") no-repeat center center / cover;
+    opacity: 0.1;
+    position: absolute;
+    top: 0; left: 0; right: 0; bottom: 0;
+    z-index: -1;
+  }
+
+  #widget-clima, #widget-dolar {
+    flex: 1 1 45%;
+    max-width: 400px;
+    min-width: 300px;
+    box-sizing: border-box;
+  }
+
+  #widget-dolar {
+    display: flex;
+    justify-content: center;
+  }
+</style>
+
+<div class="background-wrapper">
+<h1>
+  Bienvenido administrador!!!<br>
+  Selecciona el apartado de cursos para continuar descubriendo.
+</h1>
+  <div style="display: flex; flex-wrap: wrap; gap: 20px; justify-content: center; align-items: flex-start;">
+    <div id="widget-clima">
+      <div id="ww_a63b0c985aba5" v='1.3' loc='auto'
+        a='{"t":"horizontal","lang":"es","sl_lpl":1,"ids":[],"font":"Arial","sl_ics":"one_a","sl_sot":"celsius","cl_bkg":"image","cl_font":"#FFFFFF","cl_cloud":"#FFFFFF","cl_persp":"#81D4FA","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722"}'>
+        Más previsiones: <a href="https://oneweather.org/es/seville/" id="ww_a63b0c985aba5_u" target="_blank">Clima Sevilla por horas</a>
+      </div>
+      <script async src="https://app3.weatherwidget.org/js/?id=ww_a63b0c985aba5"></script>
+    </div>
+
+    <div id="widget-dolar">
+      <fxwidget-er inverse="false" amount="1" decimals="2" large="true" shadow="true" symbol="true" flag="true" changes="true"
+        grouping="true" border="false" main-curr="USD" sel-curr="MXN"
+        background-color="#2980B9" background="linear-gradient(111deg,#2980B9,#6DD5FA,#FFFFFF)" border-radius="0.5">
+      </fxwidget-er>
+      <script async src="https://s.fx-w.io/widgets/exchange-rates/latest.js"></script>
+    </div>
+  </div>
+</div>
 {% endblock %}
