comente el subir csv mientras

--- a/templates/authapp/home.html
+++ b/templates/authapp/home.html
@@ -37,7 +37,7 @@
 <div class="background-wrapper">
 <h1>
   Bienvenido administrador!!!<br>
-  Selecciona el apartado de cursos para continuar descubriendo.
+  Selecciona el apartado de Cursos o Usuarios para continuar descubriendo.
 </h1>
   <div style="display: flex; flex-wrap: wrap; gap: 20px; justify-content: center; align-items: flex-start;">
     <div id="widget-clima">
