cambio de encuesta a cuestionario

--- a/templates/authapp/home_user.html
+++ b/templates/authapp/home_user.html
@@ -84,7 +84,7 @@
     <div class="col-md-6">
       <h5>Comunicados</h5>
       <div class="notification-card">
-        <p><strong>Nombre de usuario</strong> | Hace 15 minutos</p>
+        <p><strong>{{ user.first_name }}</strong> | Hace 15 minutos</p>
         <p>Estimado equipo,<br>En Recursos Humanos creemos que la evolución no es exclusiva de las especies...</p>
       </div>
       <!-- Puedes repetir más comunicados -->
