--- a/templates/courses/admin/admin_course_stats.html
+++ b/templates/courses/admin/admin_course_stats.html
@@ -32,7 +32,7 @@
         <div class="col-md-3">
             <div class="card shadow-sm border-0 rounded-4">
                 <div class="card-body text-center">
-                    <h6>Aprobaron cuestionario</h6>
+                    <h6>Aprobaron evaluación</h6>
                     <h3>{{ approved_users }}</h3>
                 </div>
             </div>
