--- a/templates/courses/admin/wizard_form.html
+++ b/templates/courses/admin/wizard_form.html
@@ -206,7 +206,7 @@
         <div class="wizard-step d-none" id="step-4">
             <h3>4. Revisión Final</h3>
                 <button type="button" class="btn btn-primary float-end" data-bs-toggle="offcanvas" data-bs-target="#quizOffcanvas">
-                Agregar cuestionario
+                Agregar Evaluación
                 </button>
 
             <p>Por favor, revisa la información ingresada antes de guardar el curso.</p>
@@ -216,7 +216,7 @@
             </div>
             <div class="card mt-4">
                 <div class="card-header">
-                    <strong>Configuración del Cuestionario</strong>
+                    <strong>Configuración de la evaluación</strong>
                 </div>
                 <div class="card-body row g-3">
                     <div class="col-md-4">
@@ -238,7 +238,7 @@
                     <div class="form-check">
                         <input class="form-check-input" type="checkbox" id="show_correct_answers" name="show_correct_answers">
                         <label class="form-check-label" for="show_correct_answers">
-                        Mostrar respuestas correctas al finalizar el cuestionario
+                        Mostrar respuestas correctas al finalizar la evaluación
                         </label>
                     </div>
                     </div>
