--- a/templates/courses/user/wizard_form_user.html
+++ b/templates/courses/user/wizard_form_user.html
@@ -125,7 +125,7 @@
                                     <span class="badge bg-secondary">No definido</span>
                                 {% endif %}
 
-                                <!-- Estado de cuestionario 
+                                <!-- Estado de Evaluación
                                 {% if course.id in completed_quiz_ids %}
                                     <span class="badge bg-primary">Finalizado</span>
                                 {% else %}
