--- a/templates/authapp/home.html
+++ b/templates/authapp/home.html
@@ -65,7 +65,7 @@
       <div class="quick-access-card">
         <h6>Ausentismos del mes</h6>
         <p>próximamente</p>
-        <a href="#" class="btn btn-success btn-sm mt-2">→</a>
+        <a href="#" class="btn btn-success btn-sm mt-2">Ir →</a>
       </div>
     </div>
   </div>
