ya esta separada la vista del usuario de la del superuser

--- a/templates/courses/user/wizard_form_user.html
+++ b/templates/courses/user/wizard_form_user.html
@@ -125,12 +125,12 @@
                                     <span class="badge bg-secondary">No definido</span>
                                 {% endif %}
 
-                                <!-- Estado de Evaluación
-                                {% if course.id in completed_quiz_ids %}
+                                <!-- Estado de Evaluación-->
+                                {% if course.id in completed_course_ids %}
                                     <span class="badge bg-primary">Finalizado</span>
                                 {% else %}
                                     <span class="badge bg-warning text-dark">Pendiente</span>
-                                {% endif %}-->
+                                {% endif %}
                             </div>
 
                             <hr style="height: 6px; background-color:rgb(156, 156, 156); border: none; border-radius: 3px;">
