--- a/templates/courses/admin/wizard_form.html
+++ b/templates/courses/admin/wizard_form.html
@@ -78,11 +78,11 @@
                 </div>
             </div>
             <div class="d-flex justify-content-between mt-3">
-                <button type="button" class="btn btn-primary next-step">Siguiente</button>
-                <button type="button" class="btn btn-danger ms-auto" id="cancel-button"
+                <button type="button" class="btn btn-danger " id="cancel-button"
                     onclick="cancel_course('{% url 'course_wizard' %}')">
                     Cancelar
                 </button>
+                <button type="button" class="btn btn-primary next-step ms-auto">Siguiente</button>
             </div>
         </div>
 
